--- a/wiki/Documentacion.wiki
+++ b/wiki/Documentacion.wiki
@@ -1,37 +1,38 @@
 #summary Proyecto llevado a cabo por The Smarter Tech.
 ¡¡Atención!! Importante: Se recomienda la visualización de los documentos pdf a través de Firefox o Safari, es posible que desde otro navegador no se visualicen de manera correcta.
 
-https://the-smarter-tech.googlecode.com/svn/wiki/logo_small.png
+https://code.google.com/p/fagobytes-asociaciones/source/browse/wiki/imgs/logo.png
+
 = Actas =
 
-<a href="https://the-smarter-tech.googlecode.com/svn/wiki/Acta01.pdf" rel="nofollow">Acta1</a>
+<a href="https://fagobytes-asociaciones.google.com/svn/wiki/Acta01.pdf" rel="nofollow">Acta01</a>
 
-<a href="https://the-smarter-tech.googlecode.com/svn/wiki/Acta02.pdf" rel="nofollow">Acta2</a>
+<a href="https://fagobytes-asociaciones.google.com/svn/wiki/Acta02.pdf" rel="nofollow">Acta02</a>
 
-<a href="https://the-smarter-tech.googlecode.com/svn/wiki/Acta03.pdf" rel="nofollow">Acta3</a>
+<a href="https://fagobytes-asociaciones.google.com/svn/wiki/Acta03.pdf" rel="nofollow">Acta03</a>
 
-<a href="https://the-smarter-tech.googlecode.com/svn/wiki/Acta04.pdf" rel="nofollow">Acta4</a>
+<a href="https://fagobytes-asociaciones.google.com/svn/wiki/Acta04.pdf" rel="nofollow">Acta04</a>
 
-<a href="https://the-smarter-tech.googlecode.com/svn/wiki/Acta05.pdf" rel="nofollow">Acta5</a>
+<a href="https://fagobytes-asociaciones.google.com/svn/wiki/Acta05.pdf" rel="nofollow">Acta05</a>
 
-<a href="https://the-smarter-tech.googlecode.com/svn/wiki/Acta06.pdf" rel="nofollow">Acta6</a>
+<a href="https://fagobytes-asociaciones.google.com/svn/wiki/Acta06.pdf" rel="nofollow">Acta06</a>
 
-<a href="https://the-smarter-tech.googlecode.com/svn/wiki/Acta07.pdf" rel="nofollow">Acta7</a>
+<a href="https://fagobytes-asociaciones.google.com/svn/wiki/Acta07.pdf" rel="nofollow">Acta07</a>
 
-<a href="https://the-smarter-tech.googlecode.com/svn/wiki/Acta08.pdf" rel="nofollow">Acta8</a>
+<a href="https://fagobytes-asociaciones.com/svn/wiki/Acta08.pdf" rel="nofollow">Acta08</a>
 
-<a href="https://the-smarter-tech.googlecode.com/svn/wiki/Acta09.pdf" rel="nofollow">Acta9</a>
+<a href="https://fagobytes-asociaciones.com/svn/wiki/Acta09.pdf" rel="nofollow">Acta09</a>
 
-<a href="https://the-smarter-tech.googlecode.com/svn/wiki/Acta10.pdf" rel="nofollow">Acta10</a>
+<a href="https://fagobytes-asociaciones.com/svn/wiki/Acta10.pdf" rel="nofollow">Acta10</a>
 
-<a href="https://the-smarter-tech.googlecode.com/svn/wiki/Acta11.pdf" rel="nofollow">Acta11</a>
+<a href="https://fagobytes-asociaciones.com/svn/wiki/Acta11.pdf" rel="nofollow">Acta11</a>
 
 = Especificación de los requisitos =
-Documento donde se encuentra la especificación de requisitos: <a href="https://the-smarter-tech.googlecode.com/svn/wiki/EspecificaciónRequisitosIEE830.pdf" rel="nofollow">Requisitos</a>
+Documento donde se encuentra la especificación de requisitos: <a href="" rel="nofollow">Requisitos</a>
 
 
 = Planificación y Costes =
-Documento donde se encuentra la planificación: <a href="https://the-smarter-tech.googlecode.com/svn/wiki/PlanificacionFinal%20v2.pdf" rel="nofollow">Planificación</a>
+Documento donde se encuentra la planificación: <a href="" rel="nofollow">Planificación</a>
 
 -------------------------------------------------------------------
 
@@ -40,46 +41,46 @@ Documento donde se encuentra la planificación: <a href="https://the-smarter-tec
 
 ==Iteración 1: Análisis y diseño del REQ04 Gestión de usuarios==
 
-<a href="https://the-smarter-tech.googlecode.com/svn/wiki/Iteraciones/Iteracion1.pdf" rel="nofollow">Documentación Iteracion 1</a>
+<a href="" rel="nofollow">Documentación Iteracion 1</a>
 
-<a href="https://the-smarter-tech.googlecode.com/svn/trunk/FindPersonsVPP1/Iter11.vpp" rel="nofollow">Diagramas Iteracion 1</a>
+<a href="" rel="nofollow">Diagramas Iteracion 1</a>
 
 ==Iteración 2:Implementación y pruebas del REQ04 Gestión de usuarios==
 
-<a href="https://the-smarter-tech.googlecode.com/svn/wiki/Iteraciones/Iter2_REQ04.zip" rel="nofollow">Código Fuente Iter2 REQ04</a>
+<a href="" rel="nofollow">Código Fuente Iter2 REQ04</a>
 
 
 
 ==Iteración 3: Análisis y diseño del REQ05 Gestión de personas en busca y captura y del REQ06 Gestión de personas desaparecidas==
-<a href="https://the-smarter-tech.googlecode.com/svn/wiki/Iteraciones/Iteracion3.pdf" rel="nofollow">Documentación Iteracion 3</a>
+<a href="" rel="nofollow">Documentación Iteracion 3</a>
 
-<a href="https://the-smarter-tech.googlecode.com/svn/trunk/FindPersonsVPP2/Iter33.vpp" rel="nofollow">Diagramas Iteracion 3</a>
+<a href="" rel="nofollow">Diagramas Iteracion 3</a>
 
 ==Iteración 4:Implementación y pruebas del REQ05 Gestión de personas en busca y captura y del REQ06 Gestión de personas desaparecidas==
 
-<a href="https://the-smarter-tech.googlecode.com/svn/wiki/Iteraciones/Iter4_%20REQ05_%20REQ06.zip" rel="nofollow">Código Fuente Iter4 REQ05 REQ06</a>
+<a href="" rel="nofollow">Código Fuente Iter4 REQ05 REQ06</a>
 
 
 ==Iteración 5: Análisis y diseño del REQ07 Generación de fichero==
 
-<a href="https://the-smarter-tech.googlecode.com/svn/wiki/Iteraciones/Iteracion5.pdf" rel="nofollow">Documentación Iteracion 5</a>
+<a href="" rel="nofollow">Documentación Iteracion 5</a>
 
-<a href="https://the-smarter-tech.googlecode.com/svn/trunk/FindPersonsVPP3/Iter55.vpp" rel="nofollow">Diagramas Iteracion 5</a>
+<a href="" rel="nofollow">Diagramas Iteracion 5</a>
 
 ==Iteración 6:Implementación y pruebas del REQ07 Generación de fichero y del proyecto final==
 
-<a href="https://the-smarter-tech.googlecode.com/svn/wiki/Iteraciones/Iter6_%20REQ07.zip" rel="nofollow">Código Fuente Iter6 REQ07</a>
+<a href="" rel="nofollow">Código Fuente Iter6 REQ07</a>
 
 -------------------------------------------------------------------
 
 = Calidad =
-Estándar de calidad de la empresa: [https://sites.google.com/site/thesmartertechnologies/control-de-calidad Control de Calidad]
+Estándar de calidad de la empresa: ["página de control de calidad del site" Control de Calidad]
 
-Documento donde se encuentra las preguntas de evaluación:<a href="https://the-smarter-tech.googlecode.com/svn/wiki/PreguntasEvaluacionMadurez.pdf" rel="nofollow">Preguntas</a>
+Documento donde se encuentra las preguntas de evaluación:<a href="" rel="nofollow">Preguntas</a>
 
-Resultados: [https://sites.google.com/site/thesmartertechnologies/evaluacion-de-la-madurez Evaluación de la madurez]
+Resultados: ["página de evaluacion-de-la-madurez" Evaluación de la madurez]
 
-Mejoras de los procesos: [https://sites.google.com/site/thesmartertechnologies/mejoras-en-los-procesos Mejoras]
+Mejoras de los procesos: ["página de mejoras en los procesos" Mejoras]
 
 = Plan de la Gestión de la Configuración del Software =
 Documento donde se encuentra el plan de gestión de la configuración:<a href="" rel="nofollow">Plan Gestión</a>
