--- a/wiki/FagoBytes.wiki
+++ b/wiki/FagoBytes.wiki
@@ -9,25 +9,16 @@ El repositorio ha sido creado para satisfacer las necesidades del la asignatura 
 A lo largo de la Wiki y los distintos lugares en los que estamos inscritos para la realización de la práctica explicaremos los distintas decisiones, procesos y acciones que hemos decidido para la consecución del proyecto
 
 Estamos presentes en:
-
-*Twitter:* Fagobytes_Corp
-*Google+:* 
-*Google Site:* Fagobytes_Sites
-*Google Groups:* Fagobytes_Forum 
+  * Twitter: Fagobytes_Corp
+  * Google+:
+  * Google Site: Fagobytes_Sites
+  * Google Groups: Fagobytes_Forum
 
 ------------------------------------------------------------------------
 
 = Actas =
 
-<a href="https://docs.google.com/document/d/1cv02gxiULbWYCvzSuaCtTCSVp8Q5m1Nm0MUxSFc8N7E/edit?usp=sharing">Acta01</a>
-
-<a href="https://docs.google.com/document/d/1mAGqU17YebfjaSbkTIzPLd2w9msYlJsEx6HoBV_VNSk/edit?usp=sharing">Acta02</a>
-
-<a href="https://docs.google.com/document/d/1TNWYnxW3gdoJ8YvzbZeP8uyAmJD5kIUJ8UKienTh3Ec/edit?usp=sharing">Acta03</a>
-
-<a href="https://docs.google.com/document/d/1Zt9SKmEUghe6Jah7adMGfEclLdaAwUuNwi1PpUtZuJI/edit?usp=sharing">Acta04</a>
-
-<a href="https://docs.google.com/document/d/1yEUOZ20DfG56OwW7U_u5QFu09E0QuFDv1qgR4S6VxCg/edit?usp=sharing">Acta05</a>
+||<a href="https://docs.google.com/document/d/1cv02gxiULbWYCvzSuaCtTCSVp8Q5m1Nm0MUxSFc8N7E/edit?usp=sharing">Acta01</a>||<a href="https://docs.google.com/document/d/1mAGqU17YebfjaSbkTIzPLd2w9msYlJsEx6HoBV_VNSk/edit?usp=sharing">Acta02</a>||<a href="https://docs.google.com/document/d/1TNWYnxW3gdoJ8YvzbZeP8uyAmJD5kIUJ8UKienTh3Ec/edit?usp=sharing">Acta03</a>||<a href="https://docs.google.com/document/d/1Zt9SKmEUghe6Jah7adMGfEclLdaAwUuNwi1PpUtZuJI/edit?usp=sharing">Acta04</a>||<a href="https://docs.google.com/document/d/1yEUOZ20DfG56OwW7U_u5QFu09E0QuFDv1qgR4S6VxCg/edit?usp=sharing">Acta05</a>||
 
 ------------------------------------------------------------------------
 
@@ -65,6 +56,21 @@ Tutorial SVN
 
 ------------------------------------------------------------------------
 
+= Prueba =
+
+The following is:
+  * A list
+  * Of bulleted items
+    # This is a numbered sublist
+    # Which is done by indenting further
+  * And back to the main bulleted list
+
+ * This is also a list
+ * With a single leading space
+ * Notice that it is rendered
+  # At the same levels
+  # As the above lists.
+ * Despite the different indentation levels.
 
 
 Add your content here.  Format your content with:
