Edited wiki page FagoBytes through web user interface.

--- a/wiki/FagoBytes.wiki
+++ b/wiki/FagoBytes.wiki
@@ -38,13 +38,40 @@ Estamos presentes en:
 
 == Iteración 1 ==
 
+||<a href=" ">Iteración 1</a>||
+
 == Iteración 2 ==
+
+||<a href="https://docs.google.com/file/d/0B4HlLGjZ8DLCaDlPbVlEdE81M0E">Iteración 2</a>||
 
 == Iteración 3 ==
 
+||<a href="https://docs.google.com/file/d/0B4HlLGjZ8DLCNVFDTEo1TklnbVU">Iteración 3</a>||
+
 == Iteración 4 ==
 
+||<a href="https://docs.google.com/file/d/0B4HlLGjZ8DLCV1NEejRHamlsS2M">Iteración 4</a>||
+
 == Iteración 5 ==
+
+||<a href="https://docs.google.com/file/d/0B4HlLGjZ8DLCbkRjREdycDR5Qzg">Iteración 5</a>||
+
+== Iteración 6 ==
+
+||<a href="https://docs.google.com/file/d/0B4HlLGjZ8DLCRHFLam9sdmVpejg">Iteración 6</a>||
+
+== Iteración 7 ==
+
+||<a href=" ">Iteración 7</a>||
+
+------------------------------------------------------------------------
+= Casos de Uso =
+
+||<a href="https://docs.google.com/file/d/0B4HlLGjZ8DLCU0F1Ym9sWjR0dTg">CDU 01: Gestión de clientes</a>||
+||<a href="https://docs.google.com/file/d/0B4HlLGjZ8DLCU0w3MmowZHY4VUk">CDU 02: Gestión de eventos</a>||
+||<a href="https://docs.google.com/file/d/0B4HlLGjZ8DLCV05WdGtqR3VDSnc">CDU 03: Gestión de pagos</a>||
+||<a href="https://docs.google.com/file/d/0B4HlLGjZ8DLCLS16Tk1xSjRoYTQ">CDU 04: Gestión de informes</a>||
+||<a href="https://docs.google.com/file/d/0B4HlLGjZ8DLCenNYUEhnbW5vZ00">CDU 05: Gestión de credenciales</a>||
 
 ------------------------------------------------------------------------
 
@@ -59,6 +86,14 @@ Estamos presentes en:
 ------------------------------------------------------------------------
 
 = Gestión de la Configuración =
+
+||<a href="https://docs.google.com/file/d/0B4HlLGjZ8DLCbkJBcDgtYWNoWHM">Plan de Gestión de la Configuración</a>||
+
+||<a href="https://docs.google.com/file/d/0B4HlLGjZ8DLCeENwS2RGUUhUOFU">Información de Versiones</a>||
+
+------------------------------------------------------------------------
+
+= Tutorial SVN =
 
 ||<a href="https://docs.google.com/file/d/0Bw4TqB37RCkZWnVMYzFubW0xOGM">Tutorial SVN</a>||
 
