Edited wiki page FagoBytes through web user interface.

--- a/wiki/FagoBytes.wiki
+++ b/wiki/FagoBytes.wiki
@@ -8,7 +8,7 @@ A lo largo de la Wiki y los distintos lugares en los que estamos inscritos para 
 
 Estamos presentes en:
   * Twitter: [https://twitter.com/FagobytesCorp Fagobytes_Corp]
-  * Google+:
+  * Facebook: [https://www.facebook.com/FagobytesCorp FagobytesCorp]
   * Google Site: [https://sites.google.com/site/fagobytes/ Fagobytes_Sites]
   * Google Groups: [https://groups.google.com/forum/#!forum/fagobytes Fagobytes_Forum]
 ------------------------------------------------------------------------
