--- a/wiki/FagoBytes.wiki
+++ b/wiki/FagoBytes.wiki
@@ -92,7 +92,15 @@ Estamos presentes en:
 ||<a href="https://docs.google.com/file/d/0B4HlLGjZ8DLCeENwS2RGUUhUOFU">Información de Versiones</a>||
 
 ------------------------------------------------------------------------
+= Mantenimiento =
 
+||<a href="https://docs.google.com/file/d/0B5ilPjJKZvByZXlIZjVWT0Q1VFk">Plan de Mantenimiento</a>||
+
+||<a href="https://docs.google.com/file/d/0B4HlLGjZ8DLCcE9Dc21iNjNKcE0">Informe sobre el Mantenimiento</a>||
+
+||<a href="https://docs.google.com/file/d/0B4HlLGjZ8DLCM0dtNzFnempJVlU">Pruebas</a>||
+
+------------------------------------------------------------------------
 = Tutorial SVN =
 
 ||<a href="https://docs.google.com/file/d/0Bw4TqB37RCkZWnVMYzFubW0xOGM">Tutorial SVN</a>||
